# navspec

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  install.sh  pyproject.toml  requirements.txt
config/: README.md  default.yaml  developers.yaml
navspec/: __init__.py  cli.py  config.py  server.py  types.py
navspec/static/: app.js  styles.css
tests/: __init__.py  conftest.py  test_navspec.py
